@@ -397,6 +397,7 @@ enum AVCodecID {
     AV_CODEC_ID_ADPCM_THP_LE,
     AV_CODEC_ID_ADPCM_PSX,
     AV_CODEC_ID_ADPCM_AICA,
+    AV_CODEC_ID_ADPCM_IMA_DAT4,
 
     /* AMR */
     AV_CODEC_ID_AMR_NB = 0x12000,
